@startuml

class Categorie {
    id : int
    titre : string
    slug : string
}

class Article {
    id : int
    titre : string
    contenu : string
    createdAt : datetime
    slug : string
    publie : bool
}

class Commentaire {
    id : int
    contenu : string
    createdAt : datetime
}

class Utilisateur {
    id : int
    prenom : string
    nom : string
    pseudo : string
}


Categorie "0..*" -- "0..1" Article
Commentaire "0..*" -- "1..1" Article
Utilisateur "0..1" -- "0..*" Commentaire


@enduml